@@ -5,6 +5,9 @@ What's New for OpenJPEG
 ! : changed
 + : added
 
+August 31, 2011
++ [mickael] enhance the encoding test suite and remove unsued CONFIGURE_FILE into a CMakeList
+
 August 30, 2011
 + [mickael] added first version of the encoding tests suite
 
